// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`applications GET /case-admin-officer should render a placeholder when there are no open applications 1`] = `
"<main class=\\"govuk-main-wrapper \\" id=\\"main-content\\" role=\\"main\\">
    <div class=\\"govuk-grid-row\\">
        <div class=\\"govuk-grid-column-full\\">
            <h1 class=\\"govuk-heading-xl\\"><span class=\\"govuk-caption-xl\\">Case admin officer</span>Applications</h1>
        </div>
    </div>
    <div class=\\"govuk-grid-row\\">
        <div class=\\"govuk-grid-column-one-half\\">
            <div class=\\"pins-dashboard-box\\">
                <h3 class=\\"govuk-heading-l pins-dashboard-box--title\\">Search cases</h3>
                <form method=\\"post\\" action=\\"search-results\\" novalidate class=\\"pins-dashboard-box--form pins-dashboard-form\\"
                role=\\"search\\" aria-label=\\"Applications\\">
                    <div class=\\"govuk-form-group\\">
                        <label class=\\"govuk-label pins-dashboard-form--label\\" for=\\"searchApplications\\">Enter keyword, case reference or case title</label>
                        <input class=\\"govuk-input pins-dashboard-form--input\\"
                        id=\\"searchApplications\\" name=\\"query\\" type=\\"text\\" inputmode=\\"search\\">
                    </div>
                    <button class=\\"govuk-button pins-dashboard-form--btn\\" data-module=\\"govuk-button\\">Search</button>
                </form>
            </div>
        </div>
        <div class=\\"govuk-grid-column-one-half\\">
            <div class=\\"pins-dashboard-box\\">
                <h3 class=\\"govuk-heading-l pins-dashboard-box--title\\">Create new case</h3><a class=\\"govuk-button govuk-button--secondary pins-dashboard-box--btn\\"
                href=\\"/applications-service/create-new-case/\\">Create new case here</a>
            </div>
        </div>
    </div>
    <div class=\\"pins-dashboard-list--open\\">
        <h2 class=\\"govuk-heading-l\\">All cases</h2>
        <div class=\\"govuk-accordion\\" data-module=\\"govuk-accordion\\" id=\\"\\"></div>
    </div>
</main>"
`;

exports[`applications GET /case-admin-officer should render the open applications belonging to the user 1`] = `
"<main class=\\"govuk-main-wrapper \\" id=\\"main-content\\" role=\\"main\\">
    <div class=\\"govuk-grid-row\\">
        <div class=\\"govuk-grid-column-full\\">
            <h1 class=\\"govuk-heading-xl\\"><span class=\\"govuk-caption-xl\\">Case admin officer</span>Applications</h1>
        </div>
    </div>
    <div class=\\"govuk-grid-row\\">
        <div class=\\"govuk-grid-column-one-half\\">
            <div class=\\"pins-dashboard-box\\">
                <h3 class=\\"govuk-heading-l pins-dashboard-box--title\\">Search cases</h3>
                <form method=\\"post\\" action=\\"search-results\\" novalidate class=\\"pins-dashboard-box--form pins-dashboard-form\\"
                role=\\"search\\" aria-label=\\"Applications\\">
                    <div class=\\"govuk-form-group\\">
                        <label class=\\"govuk-label pins-dashboard-form--label\\" for=\\"searchApplications\\">Enter keyword, case reference or case title</label>
                        <input class=\\"govuk-input pins-dashboard-form--input\\"
                        id=\\"searchApplications\\" name=\\"query\\" type=\\"text\\" inputmode=\\"search\\">
                    </div>
                    <button class=\\"govuk-button pins-dashboard-form--btn\\" data-module=\\"govuk-button\\">Search</button>
                </form>
            </div>
        </div>
        <div class=\\"govuk-grid-column-one-half\\">
            <div class=\\"pins-dashboard-box\\">
                <h3 class=\\"govuk-heading-l pins-dashboard-box--title\\">Create new case</h3><a class=\\"govuk-button govuk-button--secondary pins-dashboard-box--btn\\"
                href=\\"/applications-service/create-new-case/\\">Create new case here</a>
            </div>
        </div>
    </div>
    <div class=\\"pins-dashboard-list--open\\">
        <h2 class=\\"govuk-heading-l\\">All cases</h2>
        <div class=\\"govuk-accordion\\" data-module=\\"govuk-accordion\\" id=\\"\\">
            <div class=\\"govuk-accordion__section \\">
                <div class=\\"govuk-accordion__section-header\\">
                    <h2 class=\\"govuk-accordion__section-heading\\"><span class=\\"govuk-accordion__section-button\\" id=\\"-heading-1\\"> Transport EN</span></h2>
                </div>
                <div id=\\"-content-1\\" class=\\"govuk-accordion__section-content\\" aria-labelledby=\\"-heading-1\\">
                    <details class=\\"govuk-details\\" data-module=\\"govuk-details\\">
                        <summary class=\\"govuk-details__summary\\"><span class=\\"govuk-details__summary-text\\"> HIG Highways EN</span>
                        </summary>
                        <div class=\\"govuk-details__text\\">
                            <table class=\\"govuk-table pins-table--fixed pins-table--bordered\\">
                                <thead class=\\"govuk-table__head\\">
                                    <tr class=\\"govuk-table__row\\">
                                        <th scope=\\"col\\" class=\\"govuk-table__header\\">Name</th>
                                        <th scope=\\"col\\" class=\\"govuk-table__header govuk-!-width-one-quarter text-align--right\\">Stage</th>
                                    </tr>
                                </thead>
                                <tbody class=\\"govuk-table__body\\">
                                    <tr class=\\"govuk-table__row\\">
                                        <td class=\\"govuk-table__cell\\"><a class=\\"govuk-body\\" href=\\"/applications-service/case/1/\\"> CASE/01 - Title CASE/01</a>
                                        </td>
                                        <td class=\\"govuk-table__cell govuk-!-width-one-quarter text-align--right\\"><strong class=\\"govuk-tag govuk-tag--green\\">Pre-Application</strong>
                                        </td>
                                    </tr>
                                </tbody>
                            </table>
                        </div>
                    </details>
                    <details class=\\"govuk-details\\" data-module=\\"govuk-details\\">
                        <summary class=\\"govuk-details__summary\\"><span class=\\"govuk-details__summary-text\\"> WAT Water EN</span>
                        </summary>
                        <div class=\\"govuk-details__text\\">
                            <table class=\\"govuk-table pins-table--fixed pins-table--bordered\\">
                                <thead class=\\"govuk-table__head\\">
                                    <tr class=\\"govuk-table__row\\">
                                        <th scope=\\"col\\" class=\\"govuk-table__header\\">Name</th>
                                        <th scope=\\"col\\" class=\\"govuk-table__header govuk-!-width-one-quarter text-align--right\\">Stage</th>
                                    </tr>
                                </thead>
                                <tbody class=\\"govuk-table__body\\">
                                    <tr class=\\"govuk-table__row\\">
                                        <td class=\\"govuk-table__cell\\"><a class=\\"govuk-body\\" href=\\"/applications-service/case/2/\\"> CASE/02 - Title CASE/02</a>
                                        </td>
                                        <td class=\\"govuk-table__cell govuk-!-width-one-quarter text-align--right\\"><strong class=\\"govuk-tag govuk-tag--\\">Status 2000</strong>
                                        </td>
                                    </tr>
                                </tbody>
                            </table>
                        </div>
                    </details>
                    <details class=\\"govuk-details\\" data-module=\\"govuk-details\\">
                        <summary class=\\"govuk-details__summary\\"><span class=\\"govuk-details__summary-text\\"> undefined undefined</span>
                        </summary>
                        <div class=\\"govuk-details__text\\">
                            <table class=\\"govuk-table pins-table--fixed pins-table--bordered\\">
                                <thead class=\\"govuk-table__head\\">
                                    <tr class=\\"govuk-table__row\\">
                                        <th scope=\\"col\\" class=\\"govuk-table__header\\">Name</th>
                                        <th scope=\\"col\\" class=\\"govuk-table__header govuk-!-width-one-quarter text-align--right\\">Stage</th>
                                    </tr>
                                </thead>
                                <tbody class=\\"govuk-table__body\\">
                                    <tr class=\\"govuk-table__row\\">
                                        <td class=\\"govuk-table__cell\\"><a class=\\"govuk-body\\" href=\\"/applications-service/case/5/\\"> CASE/05 - Case with no subsector</a>
                                        </td>
                                        <td class=\\"govuk-table__cell govuk-!-width-one-quarter text-align--right\\"><strong class=\\"govuk-tag govuk-tag--\\">draft</strong>
                                        </td>
                                    </tr>
                                </tbody>
                            </table>
                        </div>
                    </details>
                </div>
            </div>
            <div class=\\"govuk-accordion__section \\">
                <div class=\\"govuk-accordion__section-header\\">
                    <h2 class=\\"govuk-accordion__section-heading\\"><span class=\\"govuk-accordion__section-button\\" id=\\"-heading-2\\"> Waste EN</span></h2>
                </div>
                <div id=\\"-content-2\\" class=\\"govuk-accordion__section-content\\" aria-labelledby=\\"-heading-2\\">
                    <details class=\\"govuk-details\\" data-module=\\"govuk-details\\">
                        <summary class=\\"govuk-details__summary\\"><span class=\\"govuk-details__summary-text\\"> ENE Energy EN</span>
                        </summary>
                        <div class=\\"govuk-details__text\\">
                            <table class=\\"govuk-table pins-table--fixed pins-table--bordered\\">
                                <thead class=\\"govuk-table__head\\">
                                    <tr class=\\"govuk-table__row\\">
                                        <th scope=\\"col\\" class=\\"govuk-table__header\\">Name</th>
                                        <th scope=\\"col\\" class=\\"govuk-table__header govuk-!-width-one-quarter text-align--right\\">Stage</th>
                                    </tr>
                                </thead>
                                <tbody class=\\"govuk-table__body\\">
                                    <tr class=\\"govuk-table__row\\">
                                        <td class=\\"govuk-table__cell\\"><a class=\\"govuk-body\\" href=\\"/applications-service/case/3/\\"> CASE/03 - Title CASE/03</a>
                                        </td>
                                        <td class=\\"govuk-table__cell govuk-!-width-one-quarter text-align--right\\"><strong class=\\"govuk-tag govuk-tag--\\">Status 3000</strong>
                                        </td>
                                    </tr>
                                </tbody>
                            </table>
                        </div>
                    </details>
                </div>
            </div>
            <div class=\\"govuk-accordion__section \\">
                <div class=\\"govuk-accordion__section-header\\">
                    <h2 class=\\"govuk-accordion__section-heading\\"><span class=\\"govuk-accordion__section-button\\" id=\\"-heading-3\\"></span></h2>
                </div>
                <div id=\\"-content-3\\" class=\\"govuk-accordion__section-content\\" aria-labelledby=\\"-heading-3\\">
                    <details class=\\"govuk-details\\" data-module=\\"govuk-details\\">
                        <summary class=\\"govuk-details__summary\\"><span class=\\"govuk-details__summary-text\\"> undefined undefined</span>
                        </summary>
                        <div class=\\"govuk-details__text\\">
                            <table class=\\"govuk-table pins-table--fixed pins-table--bordered\\">
                                <thead class=\\"govuk-table__head\\">
                                    <tr class=\\"govuk-table__row\\">
                                        <th scope=\\"col\\" class=\\"govuk-table__header\\">Name</th>
                                        <th scope=\\"col\\" class=\\"govuk-table__header govuk-!-width-one-quarter text-align--right\\">Stage</th>
                                    </tr>
                                </thead>
                                <tbody class=\\"govuk-table__body\\">
                                    <tr class=\\"govuk-table__row\\">
                                        <td class=\\"govuk-table__cell\\"><a class=\\"govuk-body\\" href=\\"/applications-service/case/4/\\"> CASE/04 - Case with no sector</a>
                                        </td>
                                        <td class=\\"govuk-table__cell govuk-!-width-one-quarter text-align--right\\"><strong class=\\"govuk-tag govuk-tag--\\">draft</strong>
                                        </td>
                                    </tr>
                                </tbody>
                            </table>
                        </div>
                    </details>
                </div>
            </div>
        </div>
    </div>
</main>"
`;

exports[`applications GET /case-officer should render a placeholder when there are no open applications 1`] = `
"<main class=\\"govuk-main-wrapper \\" id=\\"main-content\\" role=\\"main\\">
    <div class=\\"govuk-grid-row\\">
        <div class=\\"govuk-grid-column-full\\">
            <h1 class=\\"govuk-heading-xl\\"><span class=\\"govuk-caption-xl\\">Case officer</span>Applications</h1>
        </div>
    </div>
    <div class=\\"govuk-grid-row\\">
        <div class=\\"govuk-grid-column-one-half\\">
            <div class=\\"pins-dashboard-box\\">
                <h3 class=\\"govuk-heading-l pins-dashboard-box--title\\">Search cases</h3>
                <form method=\\"post\\" action=\\"search-results\\" novalidate class=\\"pins-dashboard-box--form pins-dashboard-form\\"
                role=\\"search\\" aria-label=\\"Applications\\">
                    <div class=\\"govuk-form-group\\">
                        <label class=\\"govuk-label pins-dashboard-form--label\\" for=\\"searchApplications\\">Enter keyword, case reference or case title</label>
                        <input class=\\"govuk-input pins-dashboard-form--input\\"
                        id=\\"searchApplications\\" name=\\"query\\" type=\\"text\\" inputmode=\\"search\\">
                    </div>
                    <button class=\\"govuk-button pins-dashboard-form--btn\\" data-module=\\"govuk-button\\">Search</button>
                </form>
            </div>
        </div>
        <div class=\\"govuk-grid-column-one-half\\">
            <div class=\\"pins-dashboard-box\\">
                <h3 class=\\"govuk-heading-l pins-dashboard-box--title\\">Create new case</h3><a class=\\"govuk-button govuk-button--secondary pins-dashboard-box--btn\\"
                href=\\"/applications-service/create-new-case/\\">Create new case here</a>
            </div>
        </div>
    </div>
    <div class=\\"pins-dashboard-list--open\\">
        <h2 class=\\"govuk-heading-l\\">All cases</h2>
        <div class=\\"govuk-accordion\\" data-module=\\"govuk-accordion\\" id=\\"\\"></div>
    </div>
</main>"
`;

exports[`applications GET /case-officer should render the open applications belonging to the user 1`] = `
"<main class=\\"govuk-main-wrapper \\" id=\\"main-content\\" role=\\"main\\">
    <div class=\\"govuk-grid-row\\">
        <div class=\\"govuk-grid-column-full\\">
            <h1 class=\\"govuk-heading-xl\\"><span class=\\"govuk-caption-xl\\">Case officer</span>Applications</h1>
        </div>
    </div>
    <div class=\\"govuk-grid-row\\">
        <div class=\\"govuk-grid-column-one-half\\">
            <div class=\\"pins-dashboard-box\\">
                <h3 class=\\"govuk-heading-l pins-dashboard-box--title\\">Search cases</h3>
                <form method=\\"post\\" action=\\"search-results\\" novalidate class=\\"pins-dashboard-box--form pins-dashboard-form\\"
                role=\\"search\\" aria-label=\\"Applications\\">
                    <div class=\\"govuk-form-group\\">
                        <label class=\\"govuk-label pins-dashboard-form--label\\" for=\\"searchApplications\\">Enter keyword, case reference or case title</label>
                        <input class=\\"govuk-input pins-dashboard-form--input\\"
                        id=\\"searchApplications\\" name=\\"query\\" type=\\"text\\" inputmode=\\"search\\">
                    </div>
                    <button class=\\"govuk-button pins-dashboard-form--btn\\" data-module=\\"govuk-button\\">Search</button>
                </form>
            </div>
        </div>
        <div class=\\"govuk-grid-column-one-half\\">
            <div class=\\"pins-dashboard-box\\">
                <h3 class=\\"govuk-heading-l pins-dashboard-box--title\\">Create new case</h3><a class=\\"govuk-button govuk-button--secondary pins-dashboard-box--btn\\"
                href=\\"/applications-service/create-new-case/\\">Create new case here</a>
            </div>
        </div>
    </div>
    <div class=\\"pins-dashboard-list--open\\">
        <h2 class=\\"govuk-heading-l\\">All cases</h2>
        <div class=\\"govuk-accordion\\" data-module=\\"govuk-accordion\\" id=\\"\\">
            <div class=\\"govuk-accordion__section \\">
                <div class=\\"govuk-accordion__section-header\\">
                    <h2 class=\\"govuk-accordion__section-heading\\"><span class=\\"govuk-accordion__section-button\\" id=\\"-heading-1\\"> Transport EN</span></h2>
                </div>
                <div id=\\"-content-1\\" class=\\"govuk-accordion__section-content\\" aria-labelledby=\\"-heading-1\\">
                    <details class=\\"govuk-details\\" data-module=\\"govuk-details\\">
                        <summary class=\\"govuk-details__summary\\"><span class=\\"govuk-details__summary-text\\"> HIG Highways EN</span>
                        </summary>
                        <div class=\\"govuk-details__text\\">
                            <table class=\\"govuk-table pins-table--fixed pins-table--bordered\\">
                                <thead class=\\"govuk-table__head\\">
                                    <tr class=\\"govuk-table__row\\">
                                        <th scope=\\"col\\" class=\\"govuk-table__header\\">Name</th>
                                        <th scope=\\"col\\" class=\\"govuk-table__header govuk-!-width-one-quarter text-align--right\\">Stage</th>
                                    </tr>
                                </thead>
                                <tbody class=\\"govuk-table__body\\">
                                    <tr class=\\"govuk-table__row\\">
                                        <td class=\\"govuk-table__cell\\"><a class=\\"govuk-body\\" href=\\"/applications-service/case/1/\\"> CASE/01 - Title CASE/01</a>
                                        </td>
                                        <td class=\\"govuk-table__cell govuk-!-width-one-quarter text-align--right\\"><strong class=\\"govuk-tag govuk-tag--green\\">Pre-Application</strong>
                                        </td>
                                    </tr>
                                </tbody>
                            </table>
                        </div>
                    </details>
                    <details class=\\"govuk-details\\" data-module=\\"govuk-details\\">
                        <summary class=\\"govuk-details__summary\\"><span class=\\"govuk-details__summary-text\\"> WAT Water EN</span>
                        </summary>
                        <div class=\\"govuk-details__text\\">
                            <table class=\\"govuk-table pins-table--fixed pins-table--bordered\\">
                                <thead class=\\"govuk-table__head\\">
                                    <tr class=\\"govuk-table__row\\">
                                        <th scope=\\"col\\" class=\\"govuk-table__header\\">Name</th>
                                        <th scope=\\"col\\" class=\\"govuk-table__header govuk-!-width-one-quarter text-align--right\\">Stage</th>
                                    </tr>
                                </thead>
                                <tbody class=\\"govuk-table__body\\">
                                    <tr class=\\"govuk-table__row\\">
                                        <td class=\\"govuk-table__cell\\"><a class=\\"govuk-body\\" href=\\"/applications-service/case/2/\\"> CASE/02 - Title CASE/02</a>
                                        </td>
                                        <td class=\\"govuk-table__cell govuk-!-width-one-quarter text-align--right\\"><strong class=\\"govuk-tag govuk-tag--\\">Status 2000</strong>
                                        </td>
                                    </tr>
                                </tbody>
                            </table>
                        </div>
                    </details>
                    <details class=\\"govuk-details\\" data-module=\\"govuk-details\\">
                        <summary class=\\"govuk-details__summary\\"><span class=\\"govuk-details__summary-text\\"> undefined undefined</span>
                        </summary>
                        <div class=\\"govuk-details__text\\">
                            <table class=\\"govuk-table pins-table--fixed pins-table--bordered\\">
                                <thead class=\\"govuk-table__head\\">
                                    <tr class=\\"govuk-table__row\\">
                                        <th scope=\\"col\\" class=\\"govuk-table__header\\">Name</th>
                                        <th scope=\\"col\\" class=\\"govuk-table__header govuk-!-width-one-quarter text-align--right\\">Stage</th>
                                    </tr>
                                </thead>
                                <tbody class=\\"govuk-table__body\\">
                                    <tr class=\\"govuk-table__row\\">
                                        <td class=\\"govuk-table__cell\\"><a class=\\"govuk-body\\" href=\\"/applications-service/case/5/\\"> CASE/05 - Case with no subsector</a>
                                        </td>
                                        <td class=\\"govuk-table__cell govuk-!-width-one-quarter text-align--right\\"><strong class=\\"govuk-tag govuk-tag--\\">draft</strong>
                                        </td>
                                    </tr>
                                </tbody>
                            </table>
                        </div>
                    </details>
                </div>
            </div>
            <div class=\\"govuk-accordion__section \\">
                <div class=\\"govuk-accordion__section-header\\">
                    <h2 class=\\"govuk-accordion__section-heading\\"><span class=\\"govuk-accordion__section-button\\" id=\\"-heading-2\\"> Waste EN</span></h2>
                </div>
                <div id=\\"-content-2\\" class=\\"govuk-accordion__section-content\\" aria-labelledby=\\"-heading-2\\">
                    <details class=\\"govuk-details\\" data-module=\\"govuk-details\\">
                        <summary class=\\"govuk-details__summary\\"><span class=\\"govuk-details__summary-text\\"> ENE Energy EN</span>
                        </summary>
                        <div class=\\"govuk-details__text\\">
                            <table class=\\"govuk-table pins-table--fixed pins-table--bordered\\">
                                <thead class=\\"govuk-table__head\\">
                                    <tr class=\\"govuk-table__row\\">
                                        <th scope=\\"col\\" class=\\"govuk-table__header\\">Name</th>
                                        <th scope=\\"col\\" class=\\"govuk-table__header govuk-!-width-one-quarter text-align--right\\">Stage</th>
                                    </tr>
                                </thead>
                                <tbody class=\\"govuk-table__body\\">
                                    <tr class=\\"govuk-table__row\\">
                                        <td class=\\"govuk-table__cell\\"><a class=\\"govuk-body\\" href=\\"/applications-service/case/3/\\"> CASE/03 - Title CASE/03</a>
                                        </td>
                                        <td class=\\"govuk-table__cell govuk-!-width-one-quarter text-align--right\\"><strong class=\\"govuk-tag govuk-tag--\\">Status 3000</strong>
                                        </td>
                                    </tr>
                                </tbody>
                            </table>
                        </div>
                    </details>
                </div>
            </div>
            <div class=\\"govuk-accordion__section \\">
                <div class=\\"govuk-accordion__section-header\\">
                    <h2 class=\\"govuk-accordion__section-heading\\"><span class=\\"govuk-accordion__section-button\\" id=\\"-heading-3\\"></span></h2>
                </div>
                <div id=\\"-content-3\\" class=\\"govuk-accordion__section-content\\" aria-labelledby=\\"-heading-3\\">
                    <details class=\\"govuk-details\\" data-module=\\"govuk-details\\">
                        <summary class=\\"govuk-details__summary\\"><span class=\\"govuk-details__summary-text\\"> undefined undefined</span>
                        </summary>
                        <div class=\\"govuk-details__text\\">
                            <table class=\\"govuk-table pins-table--fixed pins-table--bordered\\">
                                <thead class=\\"govuk-table__head\\">
                                    <tr class=\\"govuk-table__row\\">
                                        <th scope=\\"col\\" class=\\"govuk-table__header\\">Name</th>
                                        <th scope=\\"col\\" class=\\"govuk-table__header govuk-!-width-one-quarter text-align--right\\">Stage</th>
                                    </tr>
                                </thead>
                                <tbody class=\\"govuk-table__body\\">
                                    <tr class=\\"govuk-table__row\\">
                                        <td class=\\"govuk-table__cell\\"><a class=\\"govuk-body\\" href=\\"/applications-service/case/4/\\"> CASE/04 - Case with no sector</a>
                                        </td>
                                        <td class=\\"govuk-table__cell govuk-!-width-one-quarter text-align--right\\"><strong class=\\"govuk-tag govuk-tag--\\">draft</strong>
                                        </td>
                                    </tr>
                                </tbody>
                            </table>
                        </div>
                    </details>
                </div>
            </div>
        </div>
    </div>
</main>"
`;

exports[`applications GET /inspector should render a placeholder when there are no open applications 1`] = `
"<main class=\\"govuk-main-wrapper \\" id=\\"main-content\\" role=\\"main\\">
    <div class=\\"govuk-grid-row\\">
        <div class=\\"govuk-grid-column-full\\">
            <h1 class=\\"govuk-heading-xl\\"><span class=\\"govuk-caption-xl\\">Inspector</span>Applications</h1>
        </div>
    </div>
    <div class=\\"govuk-grid-row\\">
        <div class=\\"govuk-grid-column-full\\">
            <div class=\\"pins-dashboard-box\\">
                <h3 class=\\"govuk-heading-l pins-dashboard-box--title\\">Search cases</h3>
                <form method=\\"post\\" action=\\"search-results\\" novalidate class=\\"pins-dashboard-box--form pins-dashboard-form\\"
                role=\\"search\\" aria-label=\\"Applications\\">
                    <div class=\\"govuk-form-group\\">
                        <label class=\\"govuk-label pins-dashboard-form--label\\" for=\\"searchApplications\\">Enter keyword, case reference or case title</label>
                        <input class=\\"govuk-input pins-dashboard-form--input\\"
                        id=\\"searchApplications\\" name=\\"query\\" type=\\"text\\" inputmode=\\"search\\">
                    </div>
                    <button class=\\"govuk-button pins-dashboard-form--btn\\" data-module=\\"govuk-button\\">Search</button>
                </form>
            </div>
        </div>
    </div>
    <div class=\\"pins-dashboard-list--open\\">
        <h2 class=\\"govuk-heading-l\\">All cases</h2>
        <div class=\\"govuk-accordion\\" data-module=\\"govuk-accordion\\" id=\\"\\"></div>
    </div>
</main>"
`;

exports[`applications GET /inspector should render the open applications belonging to the user 1`] = `
"<main class=\\"govuk-main-wrapper \\" id=\\"main-content\\" role=\\"main\\">
    <div class=\\"govuk-grid-row\\">
        <div class=\\"govuk-grid-column-full\\">
            <h1 class=\\"govuk-heading-xl\\"><span class=\\"govuk-caption-xl\\">Inspector</span>Applications</h1>
        </div>
    </div>
    <div class=\\"govuk-grid-row\\">
        <div class=\\"govuk-grid-column-full\\">
            <div class=\\"pins-dashboard-box\\">
                <h3 class=\\"govuk-heading-l pins-dashboard-box--title\\">Search cases</h3>
                <form method=\\"post\\" action=\\"search-results\\" novalidate class=\\"pins-dashboard-box--form pins-dashboard-form\\"
                role=\\"search\\" aria-label=\\"Applications\\">
                    <div class=\\"govuk-form-group\\">
                        <label class=\\"govuk-label pins-dashboard-form--label\\" for=\\"searchApplications\\">Enter keyword, case reference or case title</label>
                        <input class=\\"govuk-input pins-dashboard-form--input\\"
                        id=\\"searchApplications\\" name=\\"query\\" type=\\"text\\" inputmode=\\"search\\">
                    </div>
                    <button class=\\"govuk-button pins-dashboard-form--btn\\" data-module=\\"govuk-button\\">Search</button>
                </form>
            </div>
        </div>
    </div>
    <div class=\\"pins-dashboard-list--open\\">
        <h2 class=\\"govuk-heading-l\\">All cases</h2>
        <div class=\\"govuk-accordion\\" data-module=\\"govuk-accordion\\" id=\\"\\">
            <div class=\\"govuk-accordion__section \\">
                <div class=\\"govuk-accordion__section-header\\">
                    <h2 class=\\"govuk-accordion__section-heading\\"><span class=\\"govuk-accordion__section-button\\" id=\\"-heading-1\\"> Transport EN</span></h2>
                </div>
                <div id=\\"-content-1\\" class=\\"govuk-accordion__section-content\\" aria-labelledby=\\"-heading-1\\">
                    <details class=\\"govuk-details\\" data-module=\\"govuk-details\\">
                        <summary class=\\"govuk-details__summary\\"><span class=\\"govuk-details__summary-text\\"> HIG Highways EN</span>
                        </summary>
                        <div class=\\"govuk-details__text\\">
                            <table class=\\"govuk-table pins-table--fixed pins-table--bordered\\">
                                <thead class=\\"govuk-table__head\\">
                                    <tr class=\\"govuk-table__row\\">
                                        <th scope=\\"col\\" class=\\"govuk-table__header\\">Name</th>
                                        <th scope=\\"col\\" class=\\"govuk-table__header govuk-!-width-one-quarter text-align--right\\">Stage</th>
                                    </tr>
                                </thead>
                                <tbody class=\\"govuk-table__body\\">
                                    <tr class=\\"govuk-table__row\\">
                                        <td class=\\"govuk-table__cell\\"><a class=\\"govuk-body\\" href=\\"/applications-service/case/1/\\"> CASE/01 - Title CASE/01</a>
                                        </td>
                                        <td class=\\"govuk-table__cell govuk-!-width-one-quarter text-align--right\\"><strong class=\\"govuk-tag govuk-tag--green\\">Pre-Application</strong>
                                        </td>
                                    </tr>
                                </tbody>
                            </table>
                        </div>
                    </details>
                    <details class=\\"govuk-details\\" data-module=\\"govuk-details\\">
                        <summary class=\\"govuk-details__summary\\"><span class=\\"govuk-details__summary-text\\"> WAT Water EN</span>
                        </summary>
                        <div class=\\"govuk-details__text\\">
                            <table class=\\"govuk-table pins-table--fixed pins-table--bordered\\">
                                <thead class=\\"govuk-table__head\\">
                                    <tr class=\\"govuk-table__row\\">
                                        <th scope=\\"col\\" class=\\"govuk-table__header\\">Name</th>
                                        <th scope=\\"col\\" class=\\"govuk-table__header govuk-!-width-one-quarter text-align--right\\">Stage</th>
                                    </tr>
                                </thead>
                                <tbody class=\\"govuk-table__body\\">
                                    <tr class=\\"govuk-table__row\\">
                                        <td class=\\"govuk-table__cell\\"><a class=\\"govuk-body\\" href=\\"/applications-service/case/2/\\"> CASE/02 - Title CASE/02</a>
                                        </td>
                                        <td class=\\"govuk-table__cell govuk-!-width-one-quarter text-align--right\\"><strong class=\\"govuk-tag govuk-tag--\\">Status 2000</strong>
                                        </td>
                                    </tr>
                                </tbody>
                            </table>
                        </div>
                    </details>
                    <details class=\\"govuk-details\\" data-module=\\"govuk-details\\">
                        <summary class=\\"govuk-details__summary\\"><span class=\\"govuk-details__summary-text\\"> undefined undefined</span>
                        </summary>
                        <div class=\\"govuk-details__text\\">
                            <table class=\\"govuk-table pins-table--fixed pins-table--bordered\\">
                                <thead class=\\"govuk-table__head\\">
                                    <tr class=\\"govuk-table__row\\">
                                        <th scope=\\"col\\" class=\\"govuk-table__header\\">Name</th>
                                        <th scope=\\"col\\" class=\\"govuk-table__header govuk-!-width-one-quarter text-align--right\\">Stage</th>
                                    </tr>
                                </thead>
                                <tbody class=\\"govuk-table__body\\">
                                    <tr class=\\"govuk-table__row\\">
                                        <td class=\\"govuk-table__cell\\"><a class=\\"govuk-body\\" href=\\"/applications-service/case/5/\\"> CASE/05 - Case with no subsector</a>
                                        </td>
                                        <td class=\\"govuk-table__cell govuk-!-width-one-quarter text-align--right\\"><strong class=\\"govuk-tag govuk-tag--\\">draft</strong>
                                        </td>
                                    </tr>
                                </tbody>
                            </table>
                        </div>
                    </details>
                </div>
            </div>
            <div class=\\"govuk-accordion__section \\">
                <div class=\\"govuk-accordion__section-header\\">
                    <h2 class=\\"govuk-accordion__section-heading\\"><span class=\\"govuk-accordion__section-button\\" id=\\"-heading-2\\"> Waste EN</span></h2>
                </div>
                <div id=\\"-content-2\\" class=\\"govuk-accordion__section-content\\" aria-labelledby=\\"-heading-2\\">
                    <details class=\\"govuk-details\\" data-module=\\"govuk-details\\">
                        <summary class=\\"govuk-details__summary\\"><span class=\\"govuk-details__summary-text\\"> ENE Energy EN</span>
                        </summary>
                        <div class=\\"govuk-details__text\\">
                            <table class=\\"govuk-table pins-table--fixed pins-table--bordered\\">
                                <thead class=\\"govuk-table__head\\">
                                    <tr class=\\"govuk-table__row\\">
                                        <th scope=\\"col\\" class=\\"govuk-table__header\\">Name</th>
                                        <th scope=\\"col\\" class=\\"govuk-table__header govuk-!-width-one-quarter text-align--right\\">Stage</th>
                                    </tr>
                                </thead>
                                <tbody class=\\"govuk-table__body\\">
                                    <tr class=\\"govuk-table__row\\">
                                        <td class=\\"govuk-table__cell\\"><a class=\\"govuk-body\\" href=\\"/applications-service/case/3/\\"> CASE/03 - Title CASE/03</a>
                                        </td>
                                        <td class=\\"govuk-table__cell govuk-!-width-one-quarter text-align--right\\"><strong class=\\"govuk-tag govuk-tag--\\">Status 3000</strong>
                                        </td>
                                    </tr>
                                </tbody>
                            </table>
                        </div>
                    </details>
                </div>
            </div>
            <div class=\\"govuk-accordion__section \\">
                <div class=\\"govuk-accordion__section-header\\">
                    <h2 class=\\"govuk-accordion__section-heading\\"><span class=\\"govuk-accordion__section-button\\" id=\\"-heading-3\\"></span></h2>
                </div>
                <div id=\\"-content-3\\" class=\\"govuk-accordion__section-content\\" aria-labelledby=\\"-heading-3\\">
                    <details class=\\"govuk-details\\" data-module=\\"govuk-details\\">
                        <summary class=\\"govuk-details__summary\\"><span class=\\"govuk-details__summary-text\\"> undefined undefined</span>
                        </summary>
                        <div class=\\"govuk-details__text\\">
                            <table class=\\"govuk-table pins-table--fixed pins-table--bordered\\">
                                <thead class=\\"govuk-table__head\\">
                                    <tr class=\\"govuk-table__row\\">
                                        <th scope=\\"col\\" class=\\"govuk-table__header\\">Name</th>
                                        <th scope=\\"col\\" class=\\"govuk-table__header govuk-!-width-one-quarter text-align--right\\">Stage</th>
                                    </tr>
                                </thead>
                                <tbody class=\\"govuk-table__body\\">
                                    <tr class=\\"govuk-table__row\\">
                                        <td class=\\"govuk-table__cell\\"><a class=\\"govuk-body\\" href=\\"/applications-service/case/4/\\"> CASE/04 - Case with no sector</a>
                                        </td>
                                        <td class=\\"govuk-table__cell govuk-!-width-one-quarter text-align--right\\"><strong class=\\"govuk-tag govuk-tag--\\">draft</strong>
                                        </td>
                                    </tr>
                                </tbody>
                            </table>
                        </div>
                    </details>
                </div>
            </div>
        </div>
    </div>
</main>"
`;
